fixed an error by using overflow-x

--- a/client/src/components/Warehouses/Warehouses.scss
+++ b/client/src/components/Warehouses/Warehouses.scss
@@ -14,6 +14,7 @@
     background: #FFFFFF;
     box-shadow: 0px 2px 5px rgba(19, 24, 44, 0.1);
     border-radius: 3px;
+    overflow-x: hidden;
 
     @include tablet {
         margin: 0 0.5rem;
